calendar text overflow issue fixed

--- a/src/app/learner/pages/learner-calendar/learner-calendar.component.scss
+++ b/src/app/learner/pages/learner-calendar/learner-calendar.component.scss
@@ -142,6 +142,10 @@
         height: 40px;
         padding-top: 9px;
         font-size: 18px;
+        white-space: nowrap; 
+        width: 200px; 
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .person {
         position: absolute;
